<resources>
    <string name="app_name">Student Market</string>

    <!--the names of the titles displayed on the bottom navigation bar -->
    <string name="nav_home_title">Home</string>
    <string name="nav_search_title">Search</string>
    <string name="nav_saved_title">Saved</string>
    <string name="nav_cart_title">Bag</string>
    <string name="nav_account_title">Account</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    Strings used for registration hyperlinks-->

    <string name="hyperlink_terms_conditions">I accept the <a href="https://www.michalsons.com/blog/popi-act-summary-in-plain-language/18618">Terms and Conditions.</a>.</string>
    <string name="hyperlink_privacy_policy">I consent to the <a href="https://www.gov.za/sites/default/files/gcis_document/201409/3706726-11act4of2013protectionofpersonalinforcorrect.pdf">Privacy Policy.</a>.</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Strings for Items in cart-->
    <string name="cartitemAmount">3</string>
    <string name="cartitemName">Cheese Boy Kota</string>
    <string name="itemTotal">R100</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>