<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<!-- this is the menu of all the different fragment options we have in our navigation bar-->
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/outline_home_black_48"
        android:title="@string/nav_home_title"/>

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/outline_search_white_48"
        android:title="@string/nav_search_title" />
    <item
        android:id="@+id/saved"
        android:enabled="true"
        android:icon="@drawable/outline_bookmark_border_black_48"
        android:title="@string/nav_saved_title" />

    <item
        android:id="@+id/cart"
        android:enabled="true"
        android:icon="@drawable/outline_shopping_bag_black_48"
        android:title="@string/nav_cart_title"/>

    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/outline_assignment_ind_black_48"
        android:title="@string/nav_account_title"/>

</menu>